praktikum 6. qgis sissejuhatus

--- a/06-qgis_1.Rmd
+++ b/06-qgis_1.Rmd
@@ -34,7 +34,7 @@ Praktikumis kasutatavad andmed leiate [Moodle'ist](https://moodle.ut.ee/). Laadi
 
 Avage töölaual kaustas QGIS 3.10 *QGIS Desktop 3.10.10 with GRASS 7.8.3*. Sageli on esimisel korral avades QGIS eestikeelne. See on küll tore, kuid kahjuks on tõlge poolik ning internetist abi otsides on vähe kasu eestikeelsetest terminitest. Niisiis kasutame kursuse käigus ingliskeelset versiooni. Selleks vali ülevalt servast menüüst *Seaded → Valikud → Üldine* (vasakul servas). Tee linnuke *Override system locale* ette. Vali *User Interface Translation* rippmenüüst *American English*. *Locale (numbers, date and currency formats)* juures ei tule midagi muuta. Tähendab, et see peab jääma Estonian Estonia (et_EE). Vajuta all servas *OK*. Sulge QGIS ning ava uuesti. Nüüd on programm ingliskeelne.
 
-```{r change_language, echo=F, fig.show='hold', fig.align='center', out.width= "100%", fig.cap="Keele muutmine QGISis"}
+```{r changelanguage, echo=F, fig.show='hold', fig.align='center', out.width= "100%", fig.cap="Keele muutmine QGISis"}
 knitr::include_graphics(here::here("imgs", "change_language.gif"))
 ```
 
@@ -45,36 +45,118 @@ Kuna harjutused käsitlevad Eesti kaarte ja koordinaate, siis tuleb valida ka Ee
 - *CRS for Projects* all vali *Use a default CRS*, kliki rippmenüü kõrval ikoonil ja kirjuta seal otsinguse *Estonian Coordinate System 1997*. Vajuta sellele otsingu tulemusele ning menüü alumises servas *OK*. Tee sama *CRS for Layers* juures. 
 - Salvesta kursuse kausta enda QGIS projekt valides ülevalt vasakult *Project → Save*. Failinimeks pane näiteks *praktikum_6*. Ära unusta ka praktikumi jooksul aeg-ajalt salvestada!
 
-```{r default_crs, echo=F, fig.show='hold', fig.align='center', out.width= "100%", fig.cap="Vaikimisi koordinaatsüsteemi sätestamine"}
+```{r defaultcrs, echo=F, fig.show='hold', out.width= "100%", fig.cap="Vaikimisi koordinaatsüsteemi sätestamine"}
 knitr::include_graphics(here::here("imgs", "default_crs.gif"))
 ```
 
-<!-- kihtide aken, kaart, koordinaadid, crs, tööriistaribad -->
+
+Vaata QGISi kasutajaliidest. Suurde keskel olevasse aknasse ilmuvad kaardid ja ruumiandmete kihid. Vasakul on kihtide aken *Layers*. All servas on näitab kursori asukoha koordinaate, mõõtkava, mida saab seal ka muuta, ning paremal nurgas on koordinaatsüsteem, mis peaks praegu olema EPSG:3301, mis tähendabki Eesti 1997. a koordinaatsüsteemi. Üleval servas on menüüd ja kõiksugused tööriistad.  
 
 ## Andmete avamine
 
-<!-- Vektor ja raster -->
+Nagu varasematest mäletate on olemas raster- ja vektorandmed. Viimased neist võivad koosneda punktidest, joontest või aladest. Avame kõigist andmetest näite.
 
-<!-- punktid - nt kirikud  -->
-<!-- jooned - jõed -->
-<!-- alad - maakonnad  -->
-<!-- raster - ortofoto  -->
-<!-- raster - kõrgus mudel  -->
+- Ava Eesti maakondade kiht.
+    - *Layer → Add layer → Add vector layer*.
+    - Kliki *Vector Dataset(s)* juures sirvimise ikoonil (kolm punkti). Vali andmete kaustast fail *maakond_20201001.shp* ja vajuta *Open*. Seejärel menüü all servas *Add* ja *Close*.
+    - Nüüd on avatud kiht kõigi Eesti maakondade piirjoontega.
 
-<!-- kihtide järjekord, zoom, pan -->
+- Ava muinsuskaitse all olevate kirikute kiht. Kõik samamoodi nagu eelmise kihiga, valida tuleb aga *kirikud.gpkg*.
+
+- Ava suuremate jõgede kiht *joed.gpkg*. 
+
+
+Kihtide paneelil *Layers* saab kihte välja ja sisse lülitada ning hiirega tõstes muuta nende järjekorda. Peaaknas saab hiire rullikuga suumida (all servas muutub ka mõõtkava). Hiire vasakpoolset klahvi all hoides ja ka klaviatuuril nooltega saab liikuda. Kihi terve ulatuse nägemiseks tee *Layers* paneelil kihil parempoolne klikk ning vali *Zoom to Layer*. Sellest on abi ka siis, kui oled ei suuda kihti enam üles leida. Kihtide atribuuttabelit saab vaadata tehes paremkliki ja *Open Attribute Table*. Proovi kaardil ringi liikuda ning vaata kõikide kihtide atribuuttabelit!
+
+Vaatame ka näidet rasterandmetest ortofotode näol. Ava 2020. a ja 1995. a ortofotod kasutades *Layer → Add layer → Add Raster Layer* ning vali vastavalt failid orto_2020.tif ja orto_1995.tif. Liigu kihtide juurde ja vaata nende erinevusi. Proovi ka lähedale suumida, et näha eraldiseisvaid piksleid. Rasteri pikslisuuruse vaatamiseks tee kihil paremklikk → *Properties*. *Information from provider* on kirjas *Pixel size* kui piksli küljepikkus meetrites. Pärast seda võib rasterkihid eemaldada. Selleks tee paremklikk → *Remove layer*.
+
+Ortofotode kohta rohkem lugeda ja neid ka ise kaardiruutude kaupa allalaadida [Geoportaalist](https://geoportaal.maaamet.ee/est/Ruumiandmed/Ortofotod-p99.html). 
 
 ## Kihtide visualiseerimine
 
-<!-- Värv, kuju, suurus -->
-<!-- Läbipaistvus -->
-<!-- Väljapaistvus, värviskaalad -->
+Selleks, et kõik kihid välja paistaksid peaksid need ülevalt alla olema järjekorras kirikud, jõed, maakonnad. Andmete visualiseerisemiseks on meil punktide puhul kasutada värv, kuju ja suurus. Joonte ja alade puhul piirdume üldiselt värvi ja suurusega.
 
+### Harjutus 1
+
+Muuda kihtide stiili nii et kirikud paistaksid selgelt välja, jõed oleksid sinised ja nähtavad ning maakonnad oleks ainult piirjooned. Lisa ka maakonnanimi.
+
+Sümbolite muutmiseks tee kihil topeltkliki ja vaata, et avanenud aknas oleks vasakul servas valitud *Symbology*. Avanenud menüüs saab punkt- ja joonobjektidele valida värvi ja suurus või laiust. Pindobjektidel ehk aladel valige *Fill* all *Simple fill* asemel *Outline: Simple line*.
+
+Lisa maakonnanimi valides samas menüüs vali vasakult *Labels* ning seal *No labels* asemel *Single labels*. *Value* alt vali *MNIMI* ja vajuta all paremal OK.
+
+```{r harjutus1, echo=F, fig.show='hold', out.width= "100%", fig.cap="Harjus 1 tulemus"}
+knitr::include_graphics(here::here("imgs", "harjutus_1.png"))
+```
+
+Kas see on hea visualiseerimine? Mis on hea, mis on puudu, mis on üleliigne? 
+
+
+### Harjutus 2 
+
+Seo tabel kirikute arvust maakonnas maakondade kihiga ning värvi maakonnad vastavalt kirikute arvule.
+
+Ava Exceli vms programmiga fail *kirikud_maakonniti.csv*. Nagu näha on tegu väga lihtsa andmestikuga. **Ava sama fail QGISis: **
+
+- *Layer → Add layer → Add delimited text layer*
+- Kliki *File Name* juures sirvimise ikoonil (kolm punkti). Vali kaustast fail *kirikud_maakonniti.csv*
+- *Record and Fields Options juures* tee linnuke *First record has field names* ette. See on vajalik, et QGIS arvestaks tabeli esimest rida kui tulpade pealkirju.
+- *Geometry definition* vali *No geometry (attribute only table)*. See tuleb valida kuna antud tabelis ei ole koordinaate.
+- Kas all sample data juures on andmed kujutatud eraldi tulpades ja täpitähed olemas? Kui täpitähti pole vali üleval *Encoding* rippmenüüst *ISO-8859-15*, mis on ametlik eesti keele kodeering.
+- *Add → Close*. Nagu näha ei ilmunud QGISi peaaknasse midagi, kuna tegu pole ruumiandmete kihiga, vaid lihtsalt tabeliga.
+- Vaata kihtide paneelis selle atribuuttabelit. Nagu näha on see täpselt sama, mis Excelis. 
+
+
+**Ühenda kultuurimälestiste tabel maakondade kihiga: **
+
+- Maakondade kihil topeltklikk → vasakul servas *Joins* → all servas roheline plussmärk.
+    - *Join layer:* kirikud_maakonniti
+    - *Join field:* maakond
+    - *Target field:* MNIMI. Siin määrame, milliste tulpade põhjal tuleks tabel ja maakonnad kokku panna
+    - *Joined fields* ette linnuke ja ka linnuke ainult *kirikud* ette, kuna me ei soovi tabelist võtta ka maakondade nimesid, mis on maakondade kihis juba olemas.
+    - *Custom Field Name Prefix* ette linnuke ja kustuta sealses lahtris olev tekst.  
+    - *OK*
+    - Vaata uuesti maakondade kihi atribuuttabelit, et näha, kas igale maakonnale said lisatud kirikute arvud.
+    
+```{r tablejoin, echo=F, fig.show='hold', fig.align = 'center', out.width= "75%", fig.cap="Kirikute tabel ühendatud maakondade kihiga"}
+knitr::include_graphics(here::here("imgs", "table_join.png"))
+```
+
+**Värvi maakonnad vastavalt kirikute arvule**
+
+- Maakondade kihil paremklikk *→ Properties → Symbology*
+- *Simple line* asemel vali uuesti *Symbol layer type* juurest *Simple fill*
+- Menüü ülaservast *Single symbol* asemel *Graduated:*
+    - *Column* juures vali *kirikuid*. See määrab, millise tulba väärtuste põhjal maakonnad värvitakse.
+    - *Color ramp:* vali rippmenüüst värviskaala, millel on ühtlane 2–3 tooni üleminek. Näiteks helekollasest tumeroheliseks.
+    - Kliki *Classify*. Proovi ka erinevate jaotumistega (nt *Equal interval* ja *Pretty breaks*) ja klasside hulgaga (Classes). Näiteks *Pretty breaks* ja neli klassi annab ilusa tulemuse. Jälgi, et kõik või enamik maakondi ei oleks ühte värvi.
+    - OK
+- Nüüd on kõik maakonnad värvitud valitud värviskaalaga vastavalt sellele, kui palju on neis kirikuid. Kas see kaart on informatiivne? Mida peaks lisama või ära võtma?
+
+```{r harjutus2, echo=F, fig.show='hold', fig.align = 'center', out.width= "100%", fig.cap="Harjutus 2 tulemus"}
+knitr::include_graphics(here::here("imgs", "harjutus_2.png"))
+```
 
 
 ## Aluskaardid
 
-<!-- Quickmap ja OSM  -->
+Nagu varasemates loengutes nägime on olemas rohkelt aluskaarte, mida erinevateks rakendustes kasutatakse. Neid saab kasuta QGISis läbi pistikprogrmammide ehk *Plugins* või WMS- ja WFS-teenuste. Vastavalt *web map service* ja *web feature service*. 
+WMS-teenuse läbi saab kasutada peaaegu kõiki [Maa-ameti XGISis](https://xgis.maaamet.ee/xgis2/page/app/maainfo) olevaid kihte. Täpsemalt sellest [WMS teenuste lehel](https://geoportaal.maaamet.ee/est/Teenused/WMS-teenused-p65.html). Lisaks saab paljusid muid andmeid kogu maailmast. WMS-teenuse kaarte saab kasutada sisuliselt ainult visualiseerimiseks. Päringuid neid teha ei saa. 
 
-<!-- Maa-ameti wms  -->
+**Lisa WMS-teenusest taustaks kaart:**
+
+-  *Layer → Add layer → Add WMS/WMTS layer*.
+- *New*. Seal *Name: Maaamet alus* ning URL juurde kopeeri aadress http://kaart.maaamet.ee/wms/alus? ja vajuta *OK*. Nüüd on paika pandud, millise Maa-ameti kaardiserveriga QGIS ühenduse loob.
+- Kliki *Connect* ja vali *138 MAANTEED* ning kliki *Add*.
+- Lisa veel üks ühendus. *New*. Seal kirjuta *Name:* lahtrisse *Maaamet orto ja reljeef* ning URL juurde kopeeri aadress https://kaart.maaamet.ee/wms/fotokaart ja vajuta *OK*.
+- Kliki *Connect* ja vali *21 vreljeef* ning kliki *Add*. Sulge aken.
+- Nüüd on peaaknas näha tänapäevane maanteed koos reljeefiga. Kui WMS kihid ei paista välja, siis muuda kihtide järjekorda.
+
+**Quickmap ja OSM**
+
+Lisa veebikaartide plugin.
+- Üleval servas *Plugins → Manage and Install Plugins*. Otsingusse kirjuta *Quickmap*. Vali *QuickMapSercives* ja installi see. Sulge aken.
+- Üleval servas *Web → QuickMapServices → OSM → OSM standard*. Nüüd on aluskaardiks OpenStreetMap. Proovi ka teisi kaarte. Nt Google. 
 
 ## Järgmisel korral
+
+Kaartide kujundamine ja eksportimine, sümbolite visualiseerimine reeglipõhiselt, andmete loomine ja digitaliseerimine. 
